engine/tests/detection_corpus/bad/secret_assign_password.java
public class Db {
    static final String password = "hunter2secretpass";
}
